--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "persian_util",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc src/index.ts"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
