--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "persian_util",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "",
-  "main": "src/index",
+   "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "files": [
+    "build"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
