--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "persian_util",
   "version": "1.0.13",
   "description": "",
-   "main": "build/index.js",
-  "types": "build/index.d.ts",
+   "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "files": [
     "build"
   ],
