--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "persian_util",
   "version": "1.0.16",
   "description": "A repository for the Persian programmer community",
-   "main": "./build/index.js",
+  "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
     "build"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "watch": "tsc -w"
   },
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/mohammadrezahayati/persian_util#readme",
   "devDependencies": {
+    "@types/jest": "^28.1.8",
+    "jest": "^29.0.0",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.2"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.34.0",
