--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persian_util",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "description": "A repository for the Persian programmer community",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -35,6 +35,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "axios": "^0.27.2",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1"
