--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/mohammadrezahayati/persian_util#readme",
   "devDependencies": {
     "@types/jest": "^28.1.8",
+    "@types/qs": "^6.9.7",
     "jest": "^29.0.0",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
@@ -38,6 +39,7 @@
     "axios": "^0.27.2",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "eslint-plugin-prettier": "^4.2.1",
+    "qs": "^6.11.0"
   }
 }
