holiday skeleton added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -83,6 +83,7 @@
       "@Types": ["src/types"],
       "@Validation": ["src/validation"],
       "@WebService": ["src/webService"],
+      "@Utils": ["src/utils"],
     },
      // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
     // "strictBindCallApply": true,                      /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
