--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persian_util",
-  "version": "1.0.37",
+  "version": "1.0.38",
   "description": "A repository for the Persian programmer community",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -32,14 +32,14 @@
     "ts-jest": "^29.1.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.1.3"
-  },
-  "dependencies": {
+    "typescript": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
-    "axios": "^1.4.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
