--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persian_util",
-  "version": "1.0.41",
+  "version": "1.0.42",
   "description": "A repository for the Persian programmer community",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -23,7 +23,9 @@
     "persian",
     "convertor",
     "parser",
-    "util"
+    "util",
+    "persian tool",
+    "persian helper"
   ],
   "author": "mohammadreza hayati",
   "license": "MIT",
