--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   ],
   "scripts": {
     "test": "jest",
+    "test:coverall": "jest --coverage && coveralls < coverage/lcov.info",
     "test-watch": "jest --watchAll",
     "build": "tsc",
     "watch": "tsc -w",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint \"src/**\" "
   },
   "repository": "git+https://github.com/mohammadrezahayati/persian_util.git",
   "keywords": [
@@ -36,17 +37,18 @@
   "homepage": "https://github.com/mohammadrezahayati/persian_util#readme",
   "devDependencies": {
     "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
+    "coveralls": "^3.1.1",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.0.0",
     "prettier": "^2.7.1",
     "ts-jest": "^29.1.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "axios": "^1.4.0"
