--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "jest",
     "test:coverall": "jest --coverage && coveralls < coverage/lcov.info",
+    "coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "test-watch": "jest --watchAll",
     "build": "tsc",
     "watch": "tsc -w",
