--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" , "dev" ]
 
 jobs:
   build:
@@ -29,3 +29,4 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - run: npm run test:coverall
