--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
+      - run: npm run test:coverall
 
   publish-npm:
     needs: build
