--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -20,8 +20,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run test-coverage
+    - run: npm run test:coverage
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
